Improve reliability of gateway status reporting and gateway connector logging (#1981)